  * new file(1)-like content guessing with a magic(5) database
    Added: wc/magic/*, config/magic.mime
    Changed: MANIFEST.in, setup.py, Makefile.am
  * wc.magic package enables us to correct some wrong advertised file types.
    This also prevents exploits like those found in CVE-2002-0025 and
    CVE-2002-0024.
    Changed: wc/proxy/{Headers,HttpServer}.py

2.6 (released 25.11.2003)
  * fixed background downloading with 30x redirects
    Changed: wc/proxy/HttpProxyClient.py
  * merge upstream CVS changes of libjs (spidermonkey) as of 20031125
    Changed: libjs/*
  * do not quote HTML attributes in the parser
    Changed: wc/parser/htmllex.[lc]
  * quote all HTML attributes after filtering
    Changed: wc/filter/HtmlParser.py, wc/parser/htmllib.py
  * fixed stop() and stopwatch() daemon functions
    Changed: webcleaner, wc/daemon/*.px
  * write changed filtermodules in web gui into config
    Changed: wc/webgui/context/config_html.py
  * dynamic filter attributes are now acquired only for used filter
    stages, not for all
    Changed: wc/filter/*.py, wc/proxy/Http{Server,Client}.py

2.5 (released 15.11.2003)
  * updated blacklist filters
    Changed: config/blacklist*, config/bl2wc.py
  * make AllowRule a subclass of UrlRule
    Changed: wc/filter/rule/AllowRule.py, wc/filter/Blocker.py,
      templates/classic/macros/rules.html
  * remove unnecessary bits from the dns library
    Removed: wc/proxy/dns/{lazy,Base,win32dns}.py
    Changed: wc/proxy/dns/*.py
  * corrected the reversed google cache urls
    Changed: templates/classic/google.html
  * merge upstream CVS changes of libjs (spidermonkey) as of 20031114
    Changed: libjs/*
  * FILTER_REQUEST must have the complete request for filtering, not
    only the URL
    Changed: wc/proxy/HttpClient.py, wc/filter/Blocker.py
  * improved get_user():
    - does not use getlogin() anymore
    - checks the sanity of the username before returning it, since it
      is used as a filename part